# fastapi-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 51f33c2047a6_create_basic_table.py
app/: database.py  main.py
app/api/v1/: __init__.py  article_api.py  feed_api.py  user_api.py
app/core/: config.py
app/dto/: article_dto.py  feed_dto.py  feed_type_dto.py  user_dto.py
app/entity/: __init__.py  article_entity.py  basic_entity.py  feed_entity.py  feed_type_entity.py  user_entity.py
app/entity/mixin/: basic_mixin.py
app/repository/: article_repository.py  basic_repository.py  feed_repository.py  user_repository.py
app/service/: article_service.py  feed_service.py  user_service.py
tests/: conftest.py
tests/integration/: conftest.py  main_test.py
tests/integration/api/v1/: article_api_test.py
tests/integration/api/v1/article_api/: get_articles_test.py
tests/unit/repository/: article_repository_test.py
tests/unit/service/: article_service_test.py  feed_service_test.py  user_service_test.py
