[tool.poetry]
name = "layer-architecture"
version = "0.1.0"
description = ""
authors = ["LJ Li <ljli@xrex.io>"]
readme = "README.md"
packages = [{include = "layer_architecture"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
alembic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
